--- a/index.html
+++ b/index.html
@@ -13,34 +13,64 @@
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand text-uppercase" href="#">
-                            start bootstrap
-                        </a>
+                      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                      </button>
+                      <a class="navbar-brand text-uppercase" href="#">
+                          start bootstrap
+                      </a>
                     </div>
+
                     <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <div class=" navbar-right">
                         <ul class="nav navbar-nav navbar-right">
                             <li>
-                                <a class="text-uppercase" href="#">portfolio</a>
+                                <a class="text-uppercase" href="#">
+                                    portfolio
+                                </a>
                             </li>
                             <li>
-                                <a class="text-uppercase" href="#">about</a>
+                                <a class="text-uppercase" href="#">
+                                    about
+                                </a>
                             </li>
-                            <li>
-                                <a class="text-uppercase" href="#">contact</a>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle text-uppercase" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                    contact <span class="caret"></span>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a href="#">Action</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Another action</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Something else here</a>
+                                    </li>
+                                    <li role="separator" class="divider">
+                                    </li>
+                                    <li>
+                                        <a href="#">Separated link</a>
+                                    </li>
+                                </ul>
                             </li>
                         </ul>
-                    </div><!-- /.navbar-collapse -->
-                </div><!-- /.container-fluid -->
+                    </div>
+                </div><!-- /.container -->
             </nav>
         </header>
 
+        <!-- <section class="container">
+            <div class="row">
+                <div class="col-xs-12 bg-secondary">
+
+                </div>
+            </div>
+        </section> -->
 
     </body>
 </html>
