--- a/index.html
+++ b/index.html
@@ -4,73 +4,92 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
         <title>Freelancer - Start Bootstrap Theme</title>
     </head>
     <body>
         <header>
             <nav class="navbar navbar-default navbar-fixed-top">
-                <div class="container">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                      </button>
-                      <a class="navbar-brand text-uppercase" href="#">
-                          start bootstrap
-                      </a>
-                    </div>
+              <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand text-uppercase" href="#">start bootstrap</a>
+                </div>
 
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class=" navbar-right">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li>
-                                <a class="text-uppercase" href="#">
-                                    portfolio
-                                </a>
-                            </li>
-                            <li>
-                                <a class="text-uppercase" href="#">
-                                    about
-                                </a>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle text-uppercase" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                    contact <span class="caret"></span>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a href="#">Action</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Another action</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Something else here</a>
-                                    </li>
-                                    <li role="separator" class="divider">
-                                    </li>
-                                    <li>
-                                        <a href="#">Separated link</a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div><!-- /.container -->
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                  <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="text-uppercase" href="#">portfolio</a>
+                    </li>
+                    <li>
+                        <a class="text-uppercase" href="#">about</a>
+                    </li>
+                    <li class="dropdown text-uppercase">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                          contact <span class="caret"></span>
+                      </a>
+                      <ul class="dropdown-menu">
+                        <li>
+                            <a href="#">Action</a>
+                        </li>
+                        <li>
+                            <a href="#">Another action</a>
+                        </li>
+                        <li>
+                            <a href="#">Something else here</a>
+                        </li>
+                        <li role="separator" class="divider"></li>
+                        <li>
+                            <a href="#">Separated link</a>
+                        </li>
+                      </ul>
+                    </li>
+                  </ul>
+
+                </div><!-- /.navbar-collapse -->
+              </div><!-- /.container -->
             </nav>
         </header>
 
-        <!-- <section class="container">
+        <section class="primary-colors">
             <div class="row">
-                <div class="col-xs-12 bg-secondary">
-
+                <div class="col-xs-12 text-centered">
+                    <img class="avatar" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/avataaars.svg" alt="">
+                    <h1 class="text-uppercase">
+                        start bootstrap
+                    </h1>
+                    <p>
+                        <i class="fas fa-grip-lines"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-grip-lines"></i>
+                    </p>
+                    <p>
+                        Graphic Artist - Web Designer - Illustrator
+                    </p>
                 </div>
             </div>
-        </section> -->
+        </section>
+
+
+
+
+
+
+
+        <!-- Latest compiled and minified JavaScript -->
+
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     </body>
 </html>
