modifiche sections start

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+        <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
         <title>Freelancer - Start Bootstrap Theme</title>
@@ -59,24 +60,24 @@
             </nav>
         </header>
 
-        <section class="primary-colors">
-            <div class="row">
-                <div class="col-xs-12 text-centered">
-                    <img class="avatar" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/avataaars.svg" alt="">
-                    <h1 class="text-uppercase">
-                        start bootstrap
-                    </h1>
-                    <p>
-                        <i class="fas fa-grip-lines"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-grip-lines"></i>
-                    </p>
-                    <p>
-                        Graphic Artist - Web Designer - Illustrator
-                    </p>
+        <main>
+            <section class="start primary-colors">
+                <div class="row">
+                    <div class="col-xs-12 text-center">
+                        <img class="avatar" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/avataaars.svg" alt="">
+                        <h1 class="text-uppercase">
+                            start bootstrap
+                        </h1>
+                        <div class="star">
+                            <i class="fas fa-star fa-2x"></i>
+                        </div>
+                        <p>
+                            Graphic Artist - Web Designer - Illustrator
+                        </p>
+                    </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </main>
 
 
 
