--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                    <span class="menu text-uppercase">
+                        menu
+                    </span>
+                    <span class="hamburger-menu">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </span>
                   </button>
                   <a class="navbar-brand text-uppercase" href="#">start bootstrap</a>
                 </div>
@@ -62,21 +67,25 @@
 
         <main>
             <section class="start primary-colors">
-                <div class="row">
-                    <div class="col-xs-12 text-center">
-                        <img class="avatar" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/avataaars.svg" alt="">
-                        <h1 class="text-uppercase">
-                            start bootstrap
-                        </h1>
-                        <div class="star">
-                            <i class="fas fa-star fa-2x"></i>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-12 text-center">
+                            <img class="avatar" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/avataaars.svg" alt="">
+                            <h1 class="text-uppercase">
+                                start bootstrap
+                            </h1>
+                            <div class="star">
+                                <i class="fas fa-star fa-2x"></i>
+                            </div>
+                            <p>
+                                Graphic Artist - Web Designer - Illustrator
+                            </p>
                         </div>
-                        <p>
-                            Graphic Artist - Web Designer - Illustrator
-                        </p>
                     </div>
                 </div>
             </section>
+
+            
         </main>
 
 
@@ -88,9 +97,9 @@
         <!-- Latest compiled and minified JavaScript -->
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
 
     </body>
 </html>
