--- a/index.html
+++ b/index.html
@@ -85,7 +85,68 @@
                 </div>
             </section>
 
-            
+            <section class="portfolio">
+                <div class="container text-center">
+                    <div class="row">
+                        <div class="col-sx-12">
+                            <h2 class="section-title text-uppercase">
+                                portfolio
+                            </h2>
+                            <div class="star">
+                                <i class="fas fa-star fa-2x"></i>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="img-container">
+                                <img class="img-rounded img-responsive center-block" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cabin.png" alt="log cabin">
+                                <div class="big-plus">
+                                    <i class="fas fa-plus fa-5x"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="img-container">
+                                <img class="img-rounded img-responsive center-block " src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cake.png" alt="cake">
+                                <div class="big-plus">
+                                    <i class="fas fa-plus fa-5x"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="img-container">
+                                <img class="img-rounded img-responsive center-block" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/circus.png" alt="circus tent">
+                                <div class="big-plus">
+                                    <i class="fas fa-plus fa-5x"></i>
+                                </div>
+                            </div>    
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="img-container">
+                                <img class="img-rounded img-responsive center-block" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/game.png" alt="joystick">
+                                <div class="big-plus">
+                                    <i class="fas fa-plus fa-5x"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="img-container">
+                                <img class="img-rounded img-responsive center-block" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/safe.png" alt="locked safe">
+                                <div class="big-plus">
+                                    <i class="fas fa-plus fa-5x"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="img-container">
+                                <img class="img-rounded img-responsive center-block" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/submarine.png" alt="submarine">
+                                <div class="big-plus">
+                                    <i class="fas fa-plus fa-5x"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
 
