--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                 <div class="big-plus">
                                     <i class="fas fa-plus fa-5x"></i>
                                 </div>
-                            </div>    
+                            </div>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-4">
                             <div class="img-container">
@@ -143,6 +143,38 @@
                                     <i class="fas fa-plus fa-5x"></i>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="about primary-colors">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h2 class="text-uppercase text-center">
+                                about
+                            </h2>
+                            <div class="star text-center">
+                                <i class="fas fa-star fa-2x"></i>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-md-6">
+                            <p>
+                                Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.
+                            </p>
+                        </div>
+                        <div class="col-xs-12 col-md-6">
+                            <p>
+                                You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!
+                            </p>
+                        </div>
+                        <div class="col-sx-12 col-md-12 text-center">
+                            <a class="btn btn-default" href="#" role="button">
+                                <span class="glyphicon glyphicon-save">
+                                    <span>Free Download!</span>
+                                </span>
+                            </a>
                         </div>
                     </div>
                 </div>
