--- a/index.html
+++ b/index.html
@@ -159,16 +159,24 @@
                                 <i class="fas fa-star fa-2x"></i>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-md-6">
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-12 col-md-4 col-md-offset-2 col-lg-4 col-lg-offset-2">
                             <p>
                                 Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.
                             </p>
                         </div>
-                        <div class="col-xs-12 col-md-6">
+                        <div class="col-xs-12 col-md-4 col-lg-4">
                             <p>
                                 You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!
                             </p>
                         </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
                         <div class="col-sx-12 col-md-12 text-center">
                             <a class="btn btn-default" href="#" role="button">
                                 <span class="glyphicon glyphicon-save">
@@ -177,6 +185,42 @@
                             </a>
                         </div>
                     </div>
+                </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="contact">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-12 text-center">
+                            <h2 class="section-title text-uppercase">
+                                contact me
+                            </h2>
+                            <div class="star">
+                                <i class="fas fa-star fa-2x"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-offset-xs-3 col-xs-6">
+                                <form>
+                                    <div class="form-group">
+                                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Name">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email address">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Phone number">
+                                    </div>
+                                    <textarea class="form-control" rows="3" placeholder="Message"></textarea>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </section>
         </main>
