creazione sezione contact

--- a/index.html
+++ b/index.html
@@ -186,8 +186,6 @@
                         </div>
                     </div>
                 </div>
-                    </div>
-                </div>
             </section>
 
             <section class="contact">
@@ -202,25 +200,27 @@
                             </div>
                         </div>
                     </div>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-offset-xs-3 col-xs-6">
-                                <form>
-                                    <div class="form-group">
-                                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Name">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email address">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Phone number">
-                                    </div>
-                                    <textarea class="form-control" rows="3" placeholder="Message"></textarea>
-                                </form>
+                </div>
+                <div class="container form">
+                    <div class="row">
+                        <form class="col-xs-offset-1 col-xs-10 col-md-8 col-md-offset-2">
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="exampleInputName2" placeholder="Name">
                             </div>
-                        </div>
+                            <div class="form-group">
+                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email address">
+                            </div>
+                            <div class="form-group">
+                                <input type="number" class="form-control" id="exampleInputNumber1" placeholder="Phone number">
+                            </div>
+                            <div class="form-group message">
+                                <textarea class="form-control" rows="5" placeholder="Message"></textarea>
+                            </div>
+                            <div class="send">
+                                <input class="btn btn-default" type="submit" value="Send">
+                            </div>
+                        </form>
                     </div>
-
                 </div>
             </section>
         </main>
