--- a/index.html
+++ b/index.html
@@ -223,6 +223,65 @@
                     </div>
                 </div>
             </section>
+
+            <footer>
+                <div class="container text-center">
+                    <div class="row">
+                        <div class="col-xs-12 col-md-4">
+                            <h3 class="text-uppercase">
+                                location
+                            </h3>
+                            <p>
+                                2215 John Daniel Drive Clark, <br> MO 65243
+                            </p>
+                        </div>
+
+                        <div class="social col-xs-12 col-md-4">
+                            <h3 class="text-uppercase">
+                                around the web
+                            </h3>
+                            <button type="button" class="btn btn-social">
+                                <i class="fab fa-facebook-f"></i>
+                            </button>
+                            <button type="button" class="social btn btn-social">
+                                <i class="fab fa-twitter"></i>
+                            </button>
+                            <button type="button" class="social btn btn-social">
+                                <i class="fab fa-linkedin-in"></i>
+                            </button>
+                            <button type="button" class="social btn btn-social">
+                                <i class="fab fa-dribbble"></i>
+                            </button>
+                        </div>
+
+                        <div class="start-bootstrap col-xs-12 col-md-4">
+                            <h3 class="text-uppercase">
+                                about freelancers
+                            </h3>
+                            <p>
+                                Freelance is a free to use, MIT licensed Bootstrap theme created by
+                                <a class="start" href="#">
+                                    Start Bootstrap
+                                </a>
+                                .
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+            <section class="copyright">
+                <div class="container">
+                    <div class="row">
+                        <div class="text-center">
+                            <p>
+                                Copyright &copy; Your Website 2020
+                            </p>
+                        </div>
+
+                    </div>
+                </div>
+            </section>
+
         </main>
 
 
