modifiche font family e inserimento favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+        <link rel="icon" type="image/x-icon" href="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/favicon.ico">
         <link rel="stylesheet" href="css/style.css">
         <title>Freelancer - Start Bootstrap Theme</title>
     </head>
@@ -232,7 +233,7 @@
                                 location
                             </h3>
                             <p>
-                                2215 John Daniel Drive Clark, <br> MO 65243
+                                2215 John Daniel Drive <br> Clark, MO 65243
                             </p>
                         </div>
 
@@ -256,10 +257,10 @@
 
                         <div class="start-bootstrap col-xs-12 col-md-4">
                             <h3 class="text-uppercase">
-                                about freelancers
+                                about freelancer
                             </h3>
                             <p>
-                                Freelance is a free to use, MIT licensed Bootstrap theme created by
+                                Freelance is a free to use, MIT <br> licensed Bootstrap theme created by <br>
                                 <a class="start" href="#">
                                     Start Bootstrap
                                 </a>
@@ -277,25 +278,11 @@
                                 Copyright &copy; Your Website 2020
                             </p>
                         </div>
-
                     </div>
                 </div>
             </section>
 
         </main>
-
-
-
-
-
-
-
-        <!-- Latest compiled and minified JavaScript -->
-
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
 
     </body>
 </html>
