inserimento etichetta visibile in input focus

--- a/index.html
+++ b/index.html
@@ -206,16 +206,20 @@
                     <div class="row">
                         <form class="col-xs-offset-1 col-xs-10 col-md-8 col-md-offset-2">
                             <div class="form-group">
-                                <input type="text" class="form-control" id="exampleInputName2" placeholder="Name">
+                                <input type="text" class="form-control" id="#exampleInputName2" placeholder="Name">
+                                <label for="exampleInputName2">Name</label>
                             </div>
                             <div class="form-group">
                                 <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email address">
+                                <label for="exampleInputName2">Email address</label>
                             </div>
                             <div class="form-group">
-                                <input type="number" class="form-control" id="exampleInputNumber1" placeholder="Phone number">
+                                <input type="text" class="form-control" id="exampleInputNumber1" placeholder="Phone number">
+                                <label for="exampleInputName2">Phone number</label>
                             </div>
                             <div class="form-group message">
                                 <textarea class="form-control" rows="5" placeholder="Message"></textarea>
+                                <label for="exampleInputName2">Message</label>
                             </div>
                             <div class="send">
                                 <input class="btn btn-default" type="submit" value="Send">
