--- a/index.html
+++ b/index.html
@@ -228,8 +228,10 @@
                     </div>
                 </div>
             </section>
+        </main>
 
-            <footer>
+        <footer>
+            <div class="contacts">
                 <div class="container text-center">
                     <div class="row">
                         <div class="col-xs-12 col-md-4">
@@ -273,8 +275,8 @@
                         </div>
                     </div>
                 </div>
-            </footer>
-            <section class="copyright">
+            </div>
+            <div class="copyright">
                 <div class="container">
                     <div class="row">
                         <div class="text-center">
@@ -284,9 +286,8 @@
                         </div>
                     </div>
                 </div>
-            </section>
-
-        </main>
-
+            </div>
+        </footer>
+        
     </body>
 </html>
